--- a/comment-app-frontend-master/public/index.html
+++ b/comment-app-frontend-master/public/index.html
@@ -24,6 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!--
+    ==== SMD START ====
+    -->
+    <script src="http://js.nicedit.com/nicEdit-latest.js"></script>
+    <!--
+    ==== SMD END ====
+    -->
+
     <title>Blog Site</title>
   </head>
   <body>
